Top Part completed

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
  
 </head>
 <body>
-    <section>
+    <section class="top-banner">
             <div class="half-width">
                 <h1>Hello I'am</h1>
         <h1><span class="name">Mahfuzar Rahman</span></h1>
         <p>I am world class web developer.I work many big project in the world.I have delivered web related project in time.If you want to make a creative front end developer portfolio with a beautiful interface, then you can’t miss this one. It has a black background, which makes the site look both stylish and clean. </p>
+        <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mahfuzar-rahman-5ba57b16a/">HIRE ME</a>
     
             </div>
             <div class="half-width">
