--- a/index.html
+++ b/index.html
@@ -21,5 +21,29 @@
                 <img src="image/peter.png" alt="">
             </div>
     </section>
+    <section class="biography-banner">
+        <div class="half-width">
+            <img src="image/peter_dream.png" alt="">
+
+        </div>
+        <div class="half-width">
+            <h1>Biography</h1>
+            <p>I’m a web developer and graphic designer living in Dhaka, Bangladesh. I spend my days with my hands in many different areas of web development from back end programming to front end engineering (HTML, CSS, and jQuery/Javascript), digital accessibility, user experience and visual design.</p>
+            <a class="link-button" target="_blank" href="https://github.com/Mahfuzarrahman-sys">Download CV</a>
+
+        </div>
+    </section>
+    <section>
+        <div class="quarter-width">
+            <img src="image/work-1.png" alt="">
+
+        </div>
+        <div class="quarter-width">
+            <img src="image/work-2.png" alt="">
+        </div>
+        <div class="quarter-width">
+            <img src="image/work-3.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
