--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
         </div>
     </section>
-    <section>
+    <section class="letest-banner">
+        <h1>My Letest Work</h1>
         <div class="quarter-width">
             <img src="image/work-1.png" alt="">
 
@@ -44,6 +45,12 @@
         <div class="quarter-width">
             <img src="image/work-3.png" alt="">
         </div>
+    </section>
+    <section class="footer-banner">
+        <h1>What client are say</h1>
+        <h3>Bruce Moccy</h3>
+        <h4>Founder & CEO</h4>
+        <p>Loren Ipsum is simply dummy text of the printing and typesting industr.Loren ipsum</p>
     </section>
 </body>
 </html>
