--- a/index.html
+++ b/index.html
@@ -35,22 +35,28 @@
     </section>
     <section class="letest-banner">
         <h1>My Letest Work</h1>
-        <div class="quarter-width">
-            <img src="image/work-1.png" alt="">
-
+        <div class="row">
+            <div class="column">
+                <img src="image/work-1.png" onclick="openModal();currentSlide(1)" class="hover-shadow" alt="">
+    
+            </div>
+            <div class="column">
+                <img src="image/work-2.png" onclick="openModal();currentSlide(2)" class="hover-shadow" alt="">
+            </div>
+            <div class="column">
+                <img src="image/work-3.png" onclick="openModal();currentSlide(2)" class="hover-shadow" alt="">
+            </div>
         </div>
-        <div class="quarter-width">
-            <img src="image/work-2.png" alt="">
-        </div>
-        <div class="quarter-width">
-            <img src="image/work-3.png" alt="">
-        </div>
+       
     </section>
     <section class="footer-banner">
-        <h1>What client are say</h1>
+        <div>
+            <h2>What client are say</h2>
+        </div>
         <h3>Bruce Moccy</h3>
         <h4>Founder & CEO</h4>
         <p>Loren Ipsum is simply dummy text of the printing and typesting industr.Loren ipsum</p>
     </section>
+    <footer>Progrmming hero initiative.2020 all right reserved</footer>
 </body>
 </html>
